# Sapphire

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  init.toml
lib/: types.sp
sample/: custom_comparing_method.sp  extension.sp  foreach.sp  inheritance.sp  inheritance2.sp  string.sp  struct2.sp  time.sp
src/: CMakeLists.txt  annotatedAST.cc  annotatedAST.h  argument.cc  argument.h  argument2.h  basic_comp.cc  common.h  components.h  containers.cc  containers.h  extension.h  extension_obj.cc  feature_filesystem.cc  feature_time.cc  feature_utils.cc  filestream.cc  filestream.h  frontend.cc  frontend.h  fs_navigation.cc  function.cc  function.h  function2.h  function_obj.cc  lexical.cc  lexical.h  log.cc  log.h  machine.cc  machine.h  management.cc  management.h  message.h  object.cc  object.h  parser.cc  parser.h  pointer.cc  sapphire.cc  (+14 more)
test/: base_util_test.sp  behavior.sp  closure.sp  constraint_return_value.sp  custom_comparing_method.sp  extension.sp  filesystem.sp  struct.sp  struct2.sp
